@@ -4,6 +4,14 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+pkgcore trunk:
+
+
+pkgcore 0.8.2: October 1st, 2012
+
+* Fixed pmaint exception for when eclass preloading was enabled.
+
+
 pkgcore 0.8.1: September 29th, 2012
 
 * Pkgcore now requires snakeoil 0.5.1.
